<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/main"
    android:orientation="vertical"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context="marlon.souza.torico.MainActivity"
    android:weightSum="8">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        card_view:cardBackgroundColor="@color/gray"
        android:layout_margin="@dimen/margin_default"
        card_view:cardCornerRadius="@dimen/radius_default"
        android:layout_weight="2"
        >
        <LinearLayout
            android:id="@+id/value_hour_layout"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin_land"
            android:weightSum="10">

            <TextView
                android:id="@+id/value_hour_label"
                android:layout_weight="6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/value_hour"
                android:textSize="@dimen/text_size_port"
                android:gravity="left"/>
            <TextView
                android:id="@+id/value_hour"
                android:layout_weight="4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_port"
                android:text="R$0,00"
                android:gravity="right" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        card_view:cardBackgroundColor="@color/orange"
        android:layout_margin="@dimen/margin_default"
        card_view:cardCornerRadius="@dimen/radius_default"
        android:layout_weight="2"
        >
        <LinearLayout
            android:id="@+id/time_layout"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin_land"
            android:weightSum="10">

            <TextView
                android:id="@+id/time_label"
                android:layout_weight="6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textSize="@dimen/text_size_port"
                android:gravity="left"/>
            <TextView
                android:id="@+id/time"
                android:layout_weight="4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_port"
                android:text="00:00:00"
                android:gravity="right" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        card_view:cardBackgroundColor="@color/sea"
        android:layout_margin="@dimen/margin_default"
        card_view:cardCornerRadius="@dimen/radius_default"
        android:layout_weight="2"
        >
        <LinearLayout
            android:id="@+id/i_am_rich_layout"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin_land"
            android:weightSum="10">

            <TextView
                android:id="@+id/i_am_rich_label"
                android:layout_weight="6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/i_am_rich"
                android:textSize="@dimen/text_size_port"
                android:gravity="left"/>
            <TextView
                android:id="@+id/i_am_rich"
                android:layout_weight="4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="R$0,00"
                android:textSize="@dimen/text_size_port"
                android:gravity="right" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/actions_area"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:weightSum="9">
        <Button
            android:id="@+id/iniciar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_default"
            android:layout_marginRight="@dimen/margin_default"
            android:onClick="play"
            android:layout_weight="3"
            android:text="@string/start"/>
        <Button
            android:id="@+id/pausar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_default"
            android:layout_marginLeft="@dimen/margin_default"
            android:onClick="pause"
            android:text="@string/pause"
            android:layout_weight="3"/>
        <Button
            android:id="@+id/parar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_default"
            android:layout_marginLeft="@dimen/margin_default"
            android:onClick="stop"
            android:text="@string/stop"
            android:layout_weight="3"/>
    </LinearLayout>

</LinearLayout>
